Fix up items index on mobile and some small form tweaks.

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -37,9 +37,90 @@ header.navbar {
   height: 3rem;
 }
 
+.items-table {
+  display: grid;
+
+  .item-table-divider {
+    grid-column: 1 / -1;
+    height: 1px;
+    border-bottom: 1px solid #dadee4;
+    width: 100%;
+  }
+}
+
+$photo-width: 187px;
+
+@media all and (min-width: 841px) {
+  .items-table {
+    grid-template-columns: $photo-width 1fr 1fr;
+    grid-row-gap: 1rem;
+    grid-column-gap: 1rem;
+
+    .items-table-image {
+      grid-column: 1;
+      grid-row: span 2
+    }
+    .items-table-name {
+      grid-column: 2;
+      grid-row: span 2;
+    }
+    .items-table-categories {
+      grid-column: 3;
+      grid-row: span 2;
+    }
+    .items-table-edit-link {
+      display: block;
+      margin-top: 1em;
+    }
+  }
+}
+
+@media all and (max-width: 840px) {
+  .items-table {
+    grid-template-columns: 100px 1fr 1fr;
+    grid-row-gap: .6rem;
+    grid-column-gap: .6rem;
+
+    .items-table-image {
+      img, .image-placeholder {
+        max-width: 100px;
+        max-height: 70px;
+      }
+      grid-column: 1;
+      grid-row: span 1;
+    }
+    .items-table-name {
+      grid-column: 2/4;
+      grid-row: span 1;
+      position: relative;
+    }
+    .items-table-categories {
+      grid-column: 2/4;
+      grid-row: span 1;
+      font-size: 0.6rem;
+    }
+    .items-table-edit-link {
+      position: absolute;
+      right: 10px;
+      top: 0;
+      margin: 0;
+      font-size: 1.2em;
+    }
+  }
+}
+
+
+.image-placeholder {
+  display: inline-block;
+  width: $photo-width;
+  height: 140px;
+  background: #eee;
+}
+
 .responsive-table {
   display: flex;
   flex-wrap: wrap;
+
   margin: 0 0 3em 0;
   padding: 0;
 
